Hide overflow on body to prevent scrolling to menu

--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ body, textarea {
 
 body {
   background-color:#fafafa;
+  overflow:hidden;
 }
 
 .wrap {
